# learning-machines-drift

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  README.md  background.md  conf.py  index.rst  pyproject.toml
.github/workflows/: commit-checks.yaml
docs/: Makefile  index.rst  requirements.txt
docs/source/: conf.py  learning_machines_drift.rst
examples/: simple_example.py  synthetic_data_example.py  temporal_example.ipynb
examples/simple_example/: dev_boundary.py  main.ipynb  main.py  readme_example.py
explore-frameworks/: .gitignore  demo_evidently.py  demo_whylogs.py  pyproject.toml
learning_machines_drift/: __init__.py  backends.py  datasets.py  display.py  drift_detector.py  drift_filter.py  drift_measure.py  exceptions.py  filter.py  hypertransformer.py  hypothesis_tests.py  metrics.py  monitor.py  registry.py  types.py
tests/: test_api_design.py  test_backends.py  test_datasets.py  test_drift_detector.py  test_learning_machines_drift.py
