[tool.poetry]
name = "learning-machines-drift"
version = "0.1.0"
description = ""
authors = ["Oscar Giles <ogiles@turing.ac.uk>", "Mahed Abroshan <mabroshan@turing.ac.uk>", "Jannetta Steyn <jsteyn@turing.ac.uk>", "May Yong <myong@turing.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8,<=3.10"
numpy = "^1.22.3"
scipy = "^1.8.0"
pydantic = "^1.9.0"
Pygments = "^2.11.2"
sdmetrics = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.931"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^22.1.0"
pre-commit = "^2.17.0"
safety = "^1.10.3"
pylint = "^2.12.2"
pytest-cov = "^3.0.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
pytest-mock = "^3.7.0"


[tool.isort]
profile = "black"

[tool.mypy]
strict = true
plugins = ["numpy.typing.mypy_plugin", "pydantic.mypy"]

# You can turn off complaints about missing imports for individual modules.
# See https://mypy.readthedocs.io/en/stable/running_mypy.html#ignore-missing-imports
# Example here:
# [tool.mypy-module.*]
# ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pygments.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
