[tool.poetry]
name = "learning-machines-drift"
version = "0.1.0"
description = ""
authors = ["Sam Greenbury <sgreenbury@turing.ac.uk>", "Oscar Giles <ogiles@turing.ac.uk>", "Mahed Abroshan <mabroshan@turing.ac.uk>", "Jannetta Steyn <jannetta.steyn@newcastle.ac.uk>", "May Yong <myong@turing.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.22.4"
scipy = "^1.8.1"
pydantic = "^1.9.1"
Pygments = "^2.11.2"
sdmetrics = "0.8.0"
poetry = "^1.1.13"
tabulate = "^0.8.10"
joblib = ">=1.2"
myst-parser = "^0.18.1"
wheel = "^0.38.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
mypy = "^0.961"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^22.3.0"
pre-commit = "^2.19.0"
safety = "^2.2.0"
pylint = "^2.14.1"
pytest-cov = "^3.0.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
pytest-mock = "^3.7.0"


[tool.isort]
profile = "black"

[tool.mypy]
strict = true
plugins = ["numpy.typing.mypy_plugin", "pydantic.mypy"]

# You can turn off complaints about missing imports for individual modules.
# See https://mypy.readthedocs.io/en/stable/running_mypy.html#ignore-missing-imports
# Example here:
# [tool.mypy-module.*]
# ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pygments.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sdmetrics.*"
ignore_missing_imports = true

#[build-system]
#requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
