[tool.poetry]
name = "explore-frameworks"
version = "0.1.0"
description = "Test out existing frameworkss"
authors = ["Oscar Giles <ogiles@turing.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9, <3.10"
whylogs = "^0.6.28"
evidently = "^0.1.45-alpha.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
